@@ -2351,6 +2351,7 @@ can edit in same subtitle file (collaboration)",
                 NumberOfCharactersInTextOnly = "Number of characters in text only: {0:#,###,##0}",
                 NumberOfItalicTags = "Number of italic tags: {0}",
                 TotalCharsPerSecond = "Total characters/second: {0:0.0} seconds",
+                TotalWords = "Total words in subtitle: {0}",
                 NumberOfBoldTags = "Number of bold tags: {0}",
                 NumberOfUnderlineTags = "Number of underline tags: {0}",
                 NumberOfFontTags = "Number of font tags: {0}",
