@@ -15,6 +15,7 @@ namespace Nikse.SubtitleEdit.Forms
         private readonly LanguageStructure.Statistics _l;
         private string _mostUsedLines;
         private string _general;
+        private int _totalWords;
         private string _mostUsedWords;
         private const string WriteFormat = @"File generated by: Subtitle Edit
 http://www.nikse.dk/subtitleedit/
@@ -45,21 +46,16 @@ https://github.com/SubtitleEdit/subtitleedit
             buttonOK.Text = Configuration.Settings.Language.General.Ok;
             UiUtil.FixLargeFonts(this, buttonOK);
 
+            CalculateWordStatistics();
             CalculateGeneralStatistics();
-            {
-                textBoxGeneral.Text = _general;
-                textBoxGeneral.SelectionStart = 0;
-                textBoxGeneral.SelectionLength = 0;
-                textBoxGeneral.ScrollToCaret();
-            }
-            CalculateMostUsedWords();
-            {
-                textBoxMostUsedWords.Text = _mostUsedWords;
-            }
+            textBoxGeneral.Text = _general;
+            textBoxGeneral.SelectionStart = 0;
+            textBoxGeneral.SelectionLength = 0;
+            textBoxGeneral.ScrollToCaret();
+            textBoxMostUsedWords.Text = _mostUsedWords;
+
             CalculateMostUsedLines();
-            {
-                textBoxMostUsedLines.Text = _mostUsedLines;
-            }
+            textBoxMostUsedLines.Text = _mostUsedLines;
         }
 
         private void CalculateGeneralStatistics()
@@ -121,6 +117,7 @@ https://github.com/SubtitleEdit/subtitleedit
             sb.AppendLine(string.Format(_l.LengthInFormatXinCharactersY, _format.FriendlyName, sourceLength));
             sb.AppendLine(string.Format(_l.NumberOfCharactersInTextOnly, allText.Length));
             sb.AppendLine(string.Format(_l.TotalCharsPerSecond, HtmlUtil.RemoveHtmlTags(allText.ToString()).Length / (totalDuration / TimeCode.BaseUnit)));
+            sb.AppendLine(string.Format(_l.TotalWords, _totalWords));
             sb.AppendLine(string.Format(_l.NumberOfItalicTags, Utilities.CountTagInText(allTextToLower, "<i>")));
             sb.AppendLine(string.Format(_l.NumberOfBoldTags, Utilities.CountTagInText(allTextToLower, "<b>")));
             sb.AppendLine(string.Format(_l.NumberOfUnderlineTags, Utilities.CountTagInText(allTextToLower, "<u>")));
@@ -155,7 +152,7 @@ https://github.com/SubtitleEdit/subtitleedit
                 Clipboard.SetText(string.Format(WriteFormat, _general, _mostUsedWords, _mostUsedLines), TextDataFormat.UnicodeText);
         }
 
-        private static void MostUsedWordsAdd(Dictionary<string, int> hashtable, string text)
+        private void MostUsedWordsAdd(Dictionary<string, int> hashtable, string text)
         {
             if (text.Contains("< "))
                 text = HtmlUtil.FixInvalidItalicTags(text);
@@ -182,6 +179,7 @@ https://github.com/SubtitleEdit/subtitleedit
             foreach (string word in text.Split(ExpectedChars, StringSplitOptions.RemoveEmptyEntries))
             {
                 var s = word.Trim();
+                _totalWords++;
                 if (s.Length > 1 && hashtable.ContainsKey(s))
                 {
                     hashtable[s]++;
@@ -240,7 +238,7 @@ https://github.com/SubtitleEdit/subtitleedit
             return text;
         }
 
-        private void CalculateMostUsedWords()
+        private void CalculateWordStatistics()
         {
             var hashtable = new Dictionary<string, int>();
 
